--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,6 +1,6 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" height="200px"  alt="" srcset="">
+    <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/MSNBC/Components/Photo/_new/100506-ironman2-hmed.jpg" height="200px"  alt="" srcset="">
   </div>
 
   <div class="big-card__title">
