--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,13 +1,13 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/MSNBC/Components/Photo/_new/100506-ironman2-hmed.jpg" height="200px"  alt="" srcset="">
+    <img src="{{photoCover}}" height="200px"  alt="" srcset="">
   </div>
 
   <div class="big-card__title">
-    <h1><a href="#">Saiu a nova versão do Angular!</a></h1>
+    <h1><a href="#">{{cardTitle}}</a></h1>
   </div>
 
   <div class="big-card__description">
-    <p><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam perferendis ipsa vel reiciendis illo minima laborum iusto blanditiis quibusdam fuga alias, praesentium quia in nam voluptatum eligendi rerum beatae placeat?</a></p>
+    <p><a href="#">{{cardDescription}}</a></p>
   </div>
 </div>
