--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,15 @@
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
+
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
-      <app-big-card></app-big-card>
+      <app-big-card photoCover="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/MSNBC/Components/Photo/_new/100506-ironman2-hmed.jpg" cardTitle="New Iron Men!" cardDescription="New Iron Men was released!"></app-big-card>
     </div>
     <div class="articles__others">
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
+      <app-small-card photoCover="https://miro.medium.com/v2/resize:fit:1358/1*hEu1t6X2qoPuJ2_QO1z9hg.jpeg" cardTitle="Novo filme do Avengers em breve!"></app-small-card>
+      <app-small-card photoCover="https://imageio.forbes.com/specials-images/imageserve/63600220295903240c876e05/0x0.jpg?format=jpg&height=600&width=1200&fit=bounds" cardTitle="Volta do Iron Men no próximo Avengers?!"></app-small-card>
+      <app-small-card photoCover="https://proxy.olhardigital.com.br/wp-content/uploads/2023/08/Thane-1024x576.jpg" cardTitle="Filho do Thanos é o próximo 'Boss' do novo Avengers?!"></app-small-card>
     </div>
 </div>
